--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@ body{
   filter: drop-shadow(0px 2.60071px 45.5124px rgba(0, 0, 0, 0.1));
   }
 
+  .tabble {
+    border-radius: 20px;
+    border-collapse: inherit;
+  }
 
 
 .logo{
@@ -133,6 +137,8 @@ body{
 
   color: #BCBEC0;
 }
+
+
 
 
 .placeholder2{
@@ -544,3 +550,11 @@ nav img {
 }
 
 
+.end_btn {
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
+  height: 100%;
+  right: 100px;
+  padding: 1rem;
+}
